fix pricing on mobile

--- a/client/styles/Pricing.scss
+++ b/client/styles/Pricing.scss
@@ -9,11 +9,11 @@
   }
 
   button {
-    max-width: 80vw;
+    max-width: 90vw;
   }
 
   .search-input-label {
-    max-width: 80vw;
+    max-width: 90vw;
   }
 
   h1 {
@@ -35,8 +35,8 @@
     width: 420px;
   }
 
-  .pricing-container {
-    width: 420px;
-    margin: 0 auto;
-  }
+  // .pricing-container {
+  //   width: 420px;
+  //   margin: 0 auto;
+  // }
 }
